<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomActivity3"
    android:orientation="vertical"
    android:stretchColumns="1">

    <TableRow
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_span="2"
            android:text="@string/text_activity_3"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textSize="36sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow>

        <TextView
            android:text="Radio Button:"
            android:padding="10dp"
            android:textSize="24sp"
            android:textAlignment="textEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">
            <RadioButton
                android:id="@+id/radio_button_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_male"
                android:layout_marginEnd="20dp"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:id="@+id/radio_button_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_female"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>
    </TableRow>

    <TableRow>

        <TextView
            android:text="Time Picker:"
            android:padding="10dp"
            android:textSize="24sp"
            android:textAlignment="textEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1" />

        <Button
            android:id="@+id/button_pick_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_pick_time"
            android:onClick="showTimePickerDialog"/>

    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:id="@+id/button"
            android:layout_column="1" />
    </TableRow>

</TableLayout>